--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Run shell script
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
@@ -34,3 +34,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          terraform --version
