--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -35,3 +35,4 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           terraform --version
+          python --version
