linux command adding

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -36,3 +36,6 @@ jobs:
           echo test, and deploy your project.
           terraform --version
           python --version
+          whoami
+          cat /etc/os*
+          pwd
