--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      TF_ACTION_WORKING_DIR: ./tf_ansible_cicd_project
+      TF_ACTION_WORKING_DIR: /home/runner/work/tf_ansible_cicd_project/.github
       AWS_REGION: "ap-south-1"
 
     steps:
