--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: "Terraform-Infra-Plan"
+name: "tf-plan-checks"
 
 # Controls when the workflow will run
 on:
