--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: "tf-plan-checks"
+name: "TF-PLAN"
 
 # Controls when the workflow will run
 on:
@@ -16,25 +16,25 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      TF_ACTION_WORKING_DIR: ../../demo/
+      #TF_ACTION_WORKING_DIR: ../../demo/
       AWS_REGION: "ap-south-1"
 
     steps:
-      - name: listing files before
+      - name: BEFORE
         run: ls -lart
-      - name: Checkout
+      - name: GIT CHECKOUT
         uses: actions/checkout@v1
-      - name: listing files before
+      - name: AFTER
         run: ls -lart
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
       
-      - name: Linux command
+      - name: WELCOME MESSAGE
         run: |
           echo "Hello, Thangadurai! Hope you're Good!"
           whoami
           pwd
-      - name: disk space checking
+      - name: LINUX COMMANDS
         run: |
           echo "disk free command"
           df -hT
@@ -47,8 +47,8 @@ jobs:
           terraform --version
           terraform init 
           terraform fmt 
-          terraform plan
           terraform validate
+          terraform plan
 #################################################################
       # - name: Terraform Init
       #   id: init
