--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -10,13 +10,12 @@ on:
       - main
 
 jobs:
-  terraform:
-    name: Terraform
+  my_testing:
+    name: Provider
     runs-on: ubuntu-latest
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      #TF_ACTION_WORKING_DIR: ../../demo/
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: "ap-south-1"
 
     steps:
@@ -36,14 +35,14 @@ jobs:
           pwd
       - name: LINUX COMMANDS
         run: |
-          echo "disk free command"
-          df -hT
           ls -lrth
           pwd
-          echo "change directory"
+          echo "CHANGE DIR /demo/"
           cd demo
           ls -lrt
           echo "terraform stuff begin"
+          echo ${{ secrets.AWS_ACCESS_KEY_ID }}
+          echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           terraform --version
           terraform init 
           terraform fmt 
