--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -1,20 +1,16 @@
-# This is a basic workflow to help you get started with Actions
-
-name: "TF-PLAN"
-env:             # Global variable declaration
+name: "TF PLAN"
+env:             # Global variables declaration
   OWNER_NAME: "Thangadurai, Murugan"
   DATE: "16/06/2023"
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches:
       - main
 
 jobs:
-  my_testing:
-    name: Provider
+  job1:
+    name: PROVIDER
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -36,29 +32,31 @@ jobs:
           echo "Hello, Thangadurai! Hope you're Good!"
           echo "Printing Global env variables ${{ env.OWNER_NAME }}"
           echo "Printing Gloabl env variables ${{ env.DATE }}"
-      - name: LINUX COMMANDS
-        run: |
-          ls -lrth
-          pwd
-          echo "Printing Global env variables ${{ env.OWNER_NAME }}"
-          echo "Printing Gloabl env variables ${{ env.DATE }}"
-          echo "CHANGE DIR /demo/"
-          cd demo
-          ls -lrt
-          echo "terraform stuff begin"
-          echo ${{ secrets.AWS_ACCESS_KEY_ID }}
-          echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          terraform --version
-          terraform init 
-          terraform fmt 
-          terraform validate
-          terraform plan
-#################################################################
-      # - name: Terraform Init
-      #   id: init
-      #   run: terraform init
-
-      # - name: Terraform Plan
-      #   id: plan
-      #   if: github.event_name == 'push'
-      #   run: terraform plan -no-color
+    job2:
+       name: LINUX COMMANDS
+	     runs-on: ubuntu-latest
+       needs: [job1]
+		   env:
+		     VAR1: "Job2 variable 1"
+		     VAR2: "Job2 variable 2"
+         
+		   steps:
+          - name: Print some messages		
+            run: |
+              ls -lrth
+              pwd
+              echo "Printing Global env variables ${{ env.OWNER_NAME }}"
+              echo "Printing Gloabl env variables ${{ env.DATE }}"
+              echo "CHANGE dir /demo/"
+              cd demo
+              ls -lrt
+              echo "terraform stuff begin"
+			        echo "Printing Job level env variables ${{ env.VAR1 }}"
+			        echo "Printing Job level env variables ${{ env.VAR1 }}"
+              echo "Taking '5' seconds break...."
+			        sleep 5
+              terraform --version
+              terraform init 
+              terraform fmt 
+              terraform validate
+              terraform plan
