--- a/.github/workflows/terraplan.yml
+++ b/.github/workflows/terraplan.yml
@@ -1,5 +1,5 @@
 name: "TF PLAN"
-env:             # Global variables declaration
+env:
   OWNER_NAME: "Thangadurai, Murugan"
   DATE: "16/06/2023"
 
@@ -9,7 +9,8 @@ on:
       - main
 
 jobs:
-  job1:
+  build:
+    
     name: PROVIDER
     runs-on: ubuntu-latest
     env:
@@ -32,30 +33,29 @@ jobs:
           echo "Hello, Thangadurai! Hope you're Good!"
           echo "Printing Global env variables ${{ env.OWNER_NAME }}"
           echo "Printing Gloabl env variables ${{ env.DATE }}"
-    job2:
-       name: LINUX COMMANDS
-       runs-on: ubuntu-latest
-       needs: [job1]
-       env:
-          VAR1: "Job2 variable 1"
-	  VAR2: "Job2 variable 2"  
-      steps:
-        - name: Print some messages		
-          run: |
-              ls -lrth
-              pwd
-              echo "Printing Global env variables ${{ env.OWNER_NAME }}"
-              echo "Printing Gloabl env variables ${{ env.DATE }}"
-              echo "CHANGE dir /demo/"
-              cd demo
-              ls -lrt
-              echo "terraform stuff begin" 
-	      echo "Printing Job level env variables ${{ env.VAR1 }}"
-              echo "Printing Job level env variables ${{ env.VAR1 }}"
-              echo "Taking '5' seconds break...."
-              sleep 5
-              terraform --version
-              terraform init 
-              terraform fmt 
-              terraform validate
-              terraform plan
+  deploy:
+       
+    name: LINUX COMMANDS
+    runs-on: ubuntu-latest
+    needs: [build]
+    env:
+      VAR1: "DEV-ENV"
+      VAR2: "TESTING"  
+       
+    steps:
+      - name: Print some messages		
+        run: |
+          ls -lrth
+          pwd
+          echo "Project Owner name is: ${{ env.OWNER_NAME }}"
+          echo "Project created date is: ${{ env.DATE }}"
+          echo "CHANGE dir /demo/"
+          cd demo
+          ls -lrt
+          echo "terraform stuff begin"
+	  echo "You are working on ${{ env.VAR1 }}"
+          terraform --version
+          terraform init 
+          terraform fmt 
+          terraform validate
+          terraform plan
