--- a/.github/workflows/terraplan.yml
+++ b/.github/workflows/terraplan.yml
@@ -45,10 +45,10 @@ jobs:
           echo "Project created date is ${{ env.DATE }}"
           echo "Project created Environment is ${{ env.ENVIRONMENT }}"
           echo "Project created AWS region is: ${{ env.AWS_REGION_NAME }}"
-      - name: CHANGING DIR
+      - name: TERRAFORM WORK IN PROGRESS
         run: |
           ls -lrt
-          cd demo/
+          cd projects/
           ls -lrt
           echo "BASIC CHECKS IS IN PROGRESS......"
           terraform init
