--- a/.github/workflows/terraplan.yml
+++ b/.github/workflows/terraplan.yml
@@ -55,4 +55,5 @@ jobs:
           terraform fmt
           terraform validate
           terraform plan
+          terraform apply --auto-approve
           ls -lrth
