--- a/.github/workflows/terraplan.yml
+++ b/.github/workflows/terraplan.yml
@@ -57,5 +57,5 @@ jobs:
           terraform fmt
           terraform validate
           terraform plan
-          terraform apply --auto-approve
+          terraform destroy --auto-approve
           ls -lrth
